// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders snapshot on data 1`] = `
<div>
  Pending
</div>
`;

exports[`App renders snapshot on data 2`] = `
Array [
  <div
    className="sc-bdVaJa jfNWyr"
>
    <div>
        <div
            className="sc-bdVaJa fmcKRk"
        >
            <div
                className="sc-htpNat itAZrY"
            >
                <div>
                    <h1>
                        Portfolio
                    </h1>
                    <h2>
                        of Henry Ford
                    </h2>
                    <ul>
                        <li>
                            <a
                                href="mailto:henry.ford@example.com"
                            >
                                henry.ford@example.com
                            </a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
</div>,
  <div
    className="sc-bwzfXH dNmmcx"
/>,
]
`;

exports[`App renders snapshot on error 1`] = `
<div>
  Pending
</div>
`;

exports[`App renders snapshot on error 2`] = `
<div>
  <strong>
    error
  </strong>
</div>
`;
